--- a/src/app.scss
+++ b/src/app.scss
@@ -128,3 +128,12 @@ ux-dialog-overlay.active {
 .disabled {
     opacity: 0.5;
 }
+
+.member-info-right .form-group {
+    margin-bottom:5px;
+    margin-left:5px;
+}
+.member-info-left .form-group {
+    margin-bottom:5px;
+    margin-left:0px;
+}
