faces issues fixed

--- a/src/app.scss
+++ b/src/app.scss
@@ -137,3 +137,9 @@ ux-dialog-overlay.active {
     margin-bottom:5px;
     margin-left:0px;
 }
+
+ux-dialog-container.active {
+    //background-color: yellow;
+    margin: auto;
+    opacity: 1.0;
+}
