dirty info and dirty story

--- a/src/app.scss
+++ b/src/app.scss
@@ -21,7 +21,7 @@ body{
     font-weight: bold;
 }
 .top-head {
-    background-image: url("/gbs/static/images/background-top.png");
+    background-image: url("/gbs/static/images/background-top.png"),url("gbstories:8000//gbs/static/images/background-top.png") ;
     background-repeat: no-repeat;
 }
 
