--- a/src/app.scss
+++ b/src/app.scss
@@ -21,7 +21,17 @@ body{
     font-weight: bold;
 }
 .top-head {
-    background-image: url("/gbs/static/images/background-top.png"),url("gbstories:8000//gbs/static/images/background-top.png") ;
+    background-image: url("/gbs/static/images/background-top.png"),url("../images/background-top.png") ;
+    background-repeat: no-repeat;
+}
+
+.content-area {
+    background-image: url("/gbs/static/images/content-background.png"),url("../images/content-background.png") ;
+    background-repeat: no-repeat;
+}
+
+.footer-area {
+    background-image: url("/gbs/static/images/footer-background.png"),url("../images/footer-background.png") ;
     background-repeat: no-repeat;
 }
 
