--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,3 @@
-$navbar-default-bgxxx: #800;
-$body-bgxxx: lightblue;
 $slide-height: 220px;
 $list-group-border: white; 
 $list-group-bg: #eeeeee;
@@ -21,8 +19,9 @@ body{
     font-weight: bold;
 }
 .top-head {
-    background-image: url("/gbs/static/images/background-top.png"),url("../images/background-top.png") ;
+    background-image: url("/gbs/static/images/top-background.png"),url("../images/top-background.png") ;
     background-repeat: no-repeat;
+    min-height:500px;
 }
 
 .content-area {
@@ -33,6 +32,10 @@ body{
 .footer-area {
     background-image: url("/gbs/static/images/footer-background.png"),url("../images/footer-background.png") ;
     background-repeat: no-repeat;
+    min-height:117px;
+    margin-left:auto;
+    margin-right:auto;
+    width:1200px;
 }
 
 .slide-list {
@@ -85,6 +88,7 @@ body{
     border-right: solid 2px gray;
     border-bottom: solid 2px gray;
     background-color: lightgray;
+    border-radius: 20px;
 }
 .family-chains ul
 {
@@ -149,7 +153,7 @@ ux-dialog-overlay.active {
 }
 
 ux-dialog-container.active {
-    //background-color: yellow;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     opacity: 1.0;
 }
