photos in family connections

--- a/src/app.scss
+++ b/src/app.scss
@@ -89,6 +89,8 @@ body{
     border-bottom: solid 2px gray;
     background-color: lightgray;
     border-radius: 20px;
+    padding: 0;
+    font-size:12px;
 }
 .family-chains ul
 {
