--- a/src/app.scss
+++ b/src/app.scss
@@ -83,14 +83,20 @@ body{
 }
 .family-chains a
 {
-    min-width: 130px;
-    border-radius:5px;
+    //min-width: 130px;
+    //border-radius:5px;
     border-right: solid 2px gray;
     border-bottom: solid 2px gray;
     background-color: lightgray;
     border-radius: 20px;
     padding: 0;
     font-size:12px;
+    & img {
+        float:right;
+    }
+    max-width:110px;
+    min-width:110px;
+    overflow:hidden;
 }
 .family-chains ul
 {
