--- a/src/app.scss
+++ b/src/app.scss
@@ -19,18 +19,18 @@ body{
     font-weight: bold;
 }
 .top-head {
-    background-image: url("/gbs/static/images/top-background.png"),url("../images/top-background.png") ;
+    background-image: url("/gbs/static/images/top-background.png"),url("./src/images/top-background.png") ;
     background-repeat: no-repeat;
     min-height:500px;
 }
 
 .content-area {
-    background-image: url("/gbs/static/images/content-background.png"),url("../images/content-background.png") ;
+    background-image: url("/gbs/static/images/content-background.png"),url("./src/images/content-background.png") ;
     background-repeat: no-repeat;
 }
 
 .footer-area {
-    background-image: url("/gbs/static/images/footer-background.png"),url("../images/footer-background.png") ;
+    background-image: url("/gbs/static/images/footer-background.png"),url("./src/images/footer-background.png") ;
     background-repeat: no-repeat;
     min-height:117px;
     margin-left:auto;
