the compose does not work

--- a/src/resources/components/multi-selection.html
+++ b/src/resources/components/multi-selection.html
@@ -1,6 +1,6 @@
 <template>
     <div class="input-group" style="width:100%;margin-top:15px;">
-        <input dir="rtl" type="text" class="form-control" t="[placeholder]multi-select.filter" style="font-size:12px;height:38px;"
+        <input dir="rtl" type="text" class="form-control" t="[placeholder]multi-selection.filter" style="font-size:12px;height:38px;"
             value.bind="filter & debounce">
     </div>
     <div class="row">
