photo-strip - wip

--- a/src/resources/elements/photo-strip.scss
+++ b/src/resources/elements/photo-strip.scss
@@ -6,4 +6,11 @@ div.slide-list {
     }
 }
 
+.slides-list {
+    background-color: #cccccc;
+    overflow: hidden;
+    position: relative;
+}
+
+
 
