--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -69,6 +69,8 @@ div.member-list li {
     overflow: hidden;
     font-size: 9px;
     vertical-align: text-bottom;
+    background-color: rgba(0,0,0,0);
+    color: black;
 }
 
 ux-dialog-container.active>div {
