--- a/src/app.scss
+++ b/src/app.scss
@@ -183,7 +183,7 @@ ux-dialog-container.active {
         margin-top: 60px !important;
         height: initial !important;
         width: 600px !important;
-        height:600px; !important;
+        height:600px !important;
         margin-bottom: auto !important;
         > div {
             height:600px; !important;
