--- a/src/app.scss
+++ b/src/app.scss
@@ -186,7 +186,7 @@ ux-dialog-container.active {
         height:600px !important;
         margin-bottom: auto !important;
         > div {
-            height:600px; !important;
+            height:600px !important;
         }
     }
 }
