--- a/src/app.scss
+++ b/src/app.scss
@@ -41,7 +41,9 @@ body{
 }
 
 .slide-list {
-    background-color: #cccccc;
+    //background-color: rgba(245,245,220,0.4);
+    background-color: rgba(208,208,208,0.5);
+    //background-color: #cccccc;
     max-height: $slide-height;
     overflow: hidden;
     position: relative;
