--- a/src/resources/elements/photo-strip.scss
+++ b/src/resources/elements/photo-strip.scss
@@ -12,5 +12,32 @@ div.slide-list {
     position: relative;
 }
 
+.slides-list .slide-control
+{
+    position: absolute;
+    opacity: 0.31;
+    height: 20%;
+    width: 32px;
+    top: 40%;
+    cursor: pointer;
+}
+
+.slides-list .slide-control:hover {
+    opacity: 1.0;
+}
+
+.slides-list .slide-control.next
+{
+    right: 0%;
+    color: white;
+}
+
+.slides-list .slide-control.prev
+{
+    left: 0%;
+    color: white;
+}
+
+
 
 
