--- a/src/app.scss
+++ b/src/app.scss
@@ -35,8 +35,10 @@ body{
     min-height:117px;
     //margin-left:auto;
     //margin-right:auto;
-    margin:0;
-    margin-left: -16px;
+    margin-top:0;
+    margin-bottom:0;
+    margin-left: auto;
+    margin-right: auto;
     width:1170px;
 }
 
