--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -75,7 +75,7 @@ div.member-list li {
     background-color: rgba(0,0,0,0);
     color: black;
 }
-
+/*
 ux-dialog-container.active>div {
     background-color: lightgray;
     margin-left: auto;
@@ -85,7 +85,7 @@ ux-dialog-container.active>div {
     margin-top: 200px;
     margin-bottom: 200px;
 }
-
+*/
 .slide-list .slide-control
 {
     position: absolute;
