--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -5,9 +5,9 @@ ux-dialog-overlay.active {
 
 div.big-story-panel {
     p {
-        max-height: 400px;
+        max-height: 600px;
     }
-    min-width: 560px;
+    width: 600px;
     overflow: auto;
     /*
     padding: 10px;
@@ -35,8 +35,4 @@ div.story-title input {
 h2.story-title {
     text-align: center;
     margin: 0;
-}
-.ux-dialog-container div {
-    background-color: rgba(0,0,0,0);
-    margin-top: 200px;
 }
