--- a/src/app.scss
+++ b/src/app.scss
@@ -208,10 +208,30 @@ ux-dialog>ux-dialog-header>button {
 
 div.member-list {
     //min-height:1000px;
-    width:900px;
+    //width:900px;
     margin-left: auto;
     margin-right: auto;
+    padding-left:30px;
+    padding-right:30px;
+    max-height: 500px;
+    overflow: auto;
 }
 div.member-list li {
     background-color: rgba(100,100,100,100);
+}
+
+.rtl {
+    direction: rtl;
+    float: right;
+    .anti {
+        float: left;
+    }
+}
+
+.ltr {
+    direction: ltr;
+    float: left;
+    .anti {
+        float: right;
+    }
 }
