--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -63,6 +63,7 @@ div.story-panel {
 div.member-list {
     &.popup {
         width: 600px;
+        height: 500px;
     }
     overflow: auto;
     padding: 24px;
