partial dates. more.

--- a/src/resources/elements/roller.scss
+++ b/src/resources/elements/roller.scss
@@ -4,7 +4,7 @@ div.roller {
     margin:0;
     position:relative;
     >div {
-        color: lightgray;
+        color: #eeeeee;
         :hover {
             color: gray;
             cursor: pointer;
