--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -154,3 +154,15 @@ ux-dialog-containerxxx {
     padding-left: 15px;
     padding-right: 15px;
 }
+
+//member edit
+
+.member-info-right div.form-group {
+    margin-bottom:5px;
+    margin-left:0px;
+}
+.member-info-left div.form-group {
+    margin-bottom:5px;
+    margin-left:0px;
+}
+
