--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -36,3 +36,36 @@ h2.story-title {
     text-align: center;
     margin: 0;
 }
+
+li {
+    list-style-type: none;
+    float: right;
+}
+
+$profile_photo_size: 70px;
+div.member-list li.list-group-item {
+    width: $profile_photo_size;
+    float: right;
+    min-height: $profile_photo_size;
+    font-size: 9px;
+    vertical-align: text-bottom;
+    background-color:rgba(0,0,0,0);
+    margin-left:8px;
+    margin-bottom: 0px;
+    padding: 0;
+    a {
+         vertical-align: text-bottom;
+         align-content: center;
+         border: none;
+         img {
+             width: $profile_photo_size;
+             height: $profile_photo_size;
+             border-radius: 50%;
+         }
+         h6 {
+             text-align: center;
+         }
+    }
+}
+
+
