--- a/src/resources/elements/editable.scss
+++ b/src/resources/elements/editable.scss
@@ -1,8 +1,7 @@
 div.story-panel {
-    max-height: 160px;
+    height: 180px;
     overflow: auto;
     border-left: 3px solid darkgray;
-    min-height: 200px;
     p {
         padding-bottom: 12px;
     }
