--- a/src/resources/elements/multi-select.scss
+++ b/src/resources/elements/multi-select.scss
@@ -1,7 +1,12 @@
 .multi-select {
-    .selected {
+    div.selected {
         font-weight: bolder;
+        //max-height: 60px;
+        border-bottom: solid 2px lightgray;
     }
+    /*div.unselected {
+        //max-height: 120px;
+    }*/
     div.search-filter input {
         font-size: 14px;
         height: 32px;
@@ -13,4 +18,24 @@
         margin-left: 0;
         padding: 0;
     }
+
+    div.options {
+        overflow-x: hidden;
+        overflow-y: auto;
+        width: 90%;
+        margin-right: 0px;
+    }
+
+    /*div.ms-container {
+        height:180px;
+    }*/
+
+    ul {
+        list-style-type: none;
+    }
+
+    li a {
+        margin-right: -18px;
+    }
+
 }
