--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -51,7 +51,7 @@ ul.family span {
 div.story-panel {
     max-height: 160px;
     overflow: auto;
-    border-left: 3px solid darkgray;
+    //border-left: 3px solid darkgray;
     min-height: 200px;
     p {
         padding-bottom:12px;
