--- a/src/app.scss
+++ b/src/app.scss
@@ -32,7 +32,7 @@ body{
 }
 
 .footer-area {
-    background-image: url("/gbs/static/images/footer-background.png"),url("./src/images/footer-background.png") ;
+    //background-image: url("/gbs/static/images/footer-background.png"),url("./src/images/footer-background.png") ;
     background-repeat: no-repeat;
     min-height:117px;
     //margin-left:auto;
