--- a/src/resources/elements/editable.scss
+++ b/src/resources/elements/editable.scss
@@ -1,7 +1,7 @@
 div.story-panel {
     height: 180px;
     overflow: auto;
-    border-left: 3px solid darkgray;
+    //border-left: 3px solid darkgray;
     p {
         padding-bottom: 12px;
     }
