--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -70,7 +70,7 @@ div.stories-member-list li.list-group-item {
     }
 }
 
-div.story-box {
+div.story-section {
     height: 180px;
     overflow: hidden;
     //border-left: 3px solid darkgray;
