--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -58,6 +58,16 @@ div.story-panel {
     }
 }
 
+div.story-box {
+    float: right;
+    padding-right: 12px;
+    &.last {
+        padding-right: 0px;
+    }
+    padding-left: 0px;
+    border-left: solid 6px white;
+}
+
 //member picker
 
 div.member-list {
