--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -53,7 +53,7 @@ div.story-panel {
     overflow: auto;
     //border-left: 3px solid darkgray;
     min-height: 200px;
-    p {
+    >p {
         padding-bottom:12px;
     }
 }
