--- a/src/app.scss
+++ b/src/app.scss
@@ -28,12 +28,12 @@ body{
 
 .footer-area {
     background-repeat: no-repeat;
-    min-height:117px;
+    min-height:67px;
     margin-top:0;
     margin-bottom:0;
     margin-left: auto;
     margin-right: auto;
-    width:1170px;
+    //width:1170px;
 }
 
 .slide-list {
