--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -29,7 +29,7 @@ div.panel h2 {
 
 div.member-of-the-day {
     height: 74px;
-    width:1170px;
+    //width:1170px;
     background-color: rgba(62,65,66,1.0);
     color: white;
     font-size: 150%;
