--- a/src/app.scss
+++ b/src/app.scss
@@ -38,7 +38,7 @@ body{
 
 .slide-list {
     background-color: rgba(208,208,208,0.5);
-    max-height: $slide-height;
+   // max-height: $slide-height;
     overflow: hidden;
     position: relative;
 }
