--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -65,6 +65,7 @@ div.story-box {
         padding-right: 0px;
     }
     padding-left: 0px;
+    height:258px;
     &.notfirst {
         border-left: solid 6px white;
     }
