--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -3,24 +3,18 @@ ux-dialog-overlay.active {
     opacity: 0.95;
 }
 
+ux-dialog {
+    direction:rtl;
+}
+ux-dialog>ux-dialog-body {
+    max-height:600px;
+    width:600px;
+    overflow:auto;
+}
+
 div.big-story-panel {
-    p {
-        max-height: 600px;
-    }
     width: 600px;
     overflow: auto;
-    /*
-    padding: 10px;
-    max-width: 600px;
-    min-width: 600px;
-    min-height: 800px;
-    border: sold 1px darkgray;
-    background-color: white;
-    margin-left: -30px; //due to strange bug
-    p {
-        padding-right: 20px;
-    }
-    */
 }
 
 div.story-title input {
