--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -13,12 +13,12 @@ ux-dialog>ux-dialog-body {
 }
 
 div.big-story-panel {
-    width: 600px;
+    //width: 600px;
     overflow: auto;
 }
 
 div.story-title input {
-    width: 90%;
+    //width: 90%;
     padding: 8px;
     margin-left: auto;
     margin-right: auto;
