--- a/src/app.scss
+++ b/src/app.scss
@@ -189,3 +189,18 @@ i.is-link {
     width: 100%;
     left: 0;
 }
+
+.error {
+    background-color: red;
+    color: white;
+}
+
+.info {
+    background-color: lightblue;
+    color: black;
+}
+
+.success {
+    background-color: green;
+    color: black;
+}
