login. registration. more.

--- a/src/app.scss
+++ b/src/app.scss
@@ -195,6 +195,11 @@ i.is-link {
     color: white;
 }
 
+.warning {
+    background-color: orange;
+    color: black;
+}
+
 .info {
     background-color: lightblue;
     color: black;
