--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -81,6 +81,7 @@ div.member-list {
     overflow: auto;
     padding: 24px;
     padding-right: 36px;
+    margin-top: 24px;
     margin-bottom: 24px;
     margin-left: auto;
     margin-right: auto;
