photo info. more.

--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -30,7 +30,7 @@ button.face:hover {
     height: 32px;
     position: absolute;
     background-color:rgba(0,0,0,0);
-    border: solid 1px gray;
+    border: none;
     &.help {
         top: 0px;
         padding:auto;
