--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -18,6 +18,7 @@ div.big-story-panel {
     p {
         text-align: justify;
         padding-bottom: 12px;
+        padding-left: 12px;
     }
 }
 
