copy to clipboad. more.

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -52,11 +52,13 @@ ul.message {
     overflow: auto;
     p {
         text-align: justify;
+        padding-left: 12px;
     }
 }
 
 div.story-prefix {
     p {
         text-align: justify;
+        padding-left:12px;
     }
 }
