--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -62,6 +62,9 @@ div.member-story-panel {
             font-size:110%;
         }
     }
+    a {
+        color: blue;
+    }
 }
 
 div.story-box {
