--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -43,6 +43,10 @@ button.face:hover {
         top: 64px;
         color: white;
     }
+    &.copy-to-clipboard {
+        top: 96px;
+        color: white;
+    }
 }
 
 /*.highlighter {
