--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -86,6 +86,9 @@ div.justified-story {
         padding-bottom: 2px;
         text-align: justify;
     }
+    a {
+        color: blue;
+    }
 }
 
 button.active {
