--- a/src/resources/elements/timeline.scss
+++ b/src/resources/elements/timeline.scss
@@ -3,6 +3,7 @@ li.timeline-item {
     border-right:solid 1px white;
     height:100%;
     width:12px;
+    background-color: lightgray;
     &.in-range {
         background-color: gray;
     }
