sort array by properties. applies to member list.

--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -87,11 +87,12 @@ div.member-list {
         width: 600px;
         height: 500px;
     }
+    direction: rtl;
     overflow: auto;
-    padding: 24px;
+    padding: 16px;
     padding-right: 36px;
-    margin-top: 24px;
-    margin-bottom: 24px;
+    margin-top: 16px;
+    margin-bottom: 16px;
     margin-left: auto;
     margin-right: auto;
 
