start font size control

--- a/src/app.scss
+++ b/src/app.scss
@@ -250,3 +250,23 @@ ul.nav {
     -webkit-background-size: cover;
     background-size: cover;
 }
+
+.font-size-100 {
+    font-size: 100%;
+}
+.font-size-110 {
+    font-size: 110%;
+}
+.font-size-120 {
+    font-size: 120%;
+}
+.font-size-130 {
+    font-size: 130%;
+}
+.font-size-140 {
+    font-size: 140%;
+}
+.font-size-150 {
+    font-size: 150%;
+}
+
