--- a/src/app.scss
+++ b/src/app.scss
@@ -251,6 +251,10 @@ ul.nav {
     background-size: cover;
 }
 
+.highlight {
+    background-color: yellow;
+}
+
 .font-size-100 {
     font-size: 100%;
 }
