--- a/src/resources/elements/photo-strip.scss
+++ b/src/resources/elements/photo-strip.scss
@@ -15,7 +15,7 @@ div.slide-list {
 .slides-list .slide-control
 {
     position: absolute;
-    opacity: 0.76;
+    opacity: 0.6;
     height: 20%;
     width: 32px;
     top: 40%;
@@ -36,6 +36,7 @@ div.slide-list {
 {
     left: 0%;
     color: white;
+    &.shadow
 }
 
 
