--- a/src/scrollbox.scss
+++ b/src/scrollbox.scss
@@ -31,6 +31,7 @@
     background-clip: padding-box;
     border: solid transparent;
     border-width: 0 0 0 4px;
+    background-color: rgba(0,0,0,.05);
 }
 ::-webkit-scrollbar-track:horizontal {
     border-width: 4px 0 0
