--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -16,6 +16,7 @@ div.big-story-panel {
     //width: 600px;
     overflow: auto;
     p {
+        font-size: 110%;
         text-align: justify;
         padding-bottom: 2px;
         padding-left: 12px;
