--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -94,6 +94,9 @@ div.story-box {
         cursor: pointer;
         margin-left:30px;
     }
+    h4 {
+        width:275px;
+    }
 }
 
 //member picker
