--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -78,8 +78,13 @@ div.member-story-panel {
 }
 
 div.story-box {
+    position: relative;
     float: right;
     padding-right: 12px;
+    a.goto-story-page {
+        position:absolute;
+        left:-28px;
+    }
     &.last {
         padding-right: 0px;
     }
@@ -96,6 +101,9 @@ div.story-box {
     }
     h4 {
         width:255px;
+    }
+    span.name {
+        font-weight: bold;
     }
 }
 
