story source separated from creator/updater. some style issues.

--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -59,7 +59,7 @@ button.face:hover {
     border: none;
 }
 */
-span.highlighted {
+span.highlighted-face {
     color: yellow;
     font-weight: bolder;
 }
