--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -1,24 +1,28 @@
-div.panel {
-    //height: $panel-height;
-    background-color: rgba(0,0,0,0);
-    margin-bottom: 0px;
-}
+
 div.main-panel {
     padding: 16px;
+    background-color: rgba(0,0,0,0);
+    margin-bottom: 20px;
+
+    > div {
+
+        /* See the note in home.ts L62 */
+        max-height: calc(100vh - 606px);
+        min-height: 200px;
+
+        margin-top: 15px;
+        overflow-y: auto;
+    }
     div.row {
         padding: 0px;
         margin: 0px;
     }
-}
-div.panel-vid {
-    background-color: rgba(0,0,0,0);
-}
-div.panel-stories {
-    background-color: rgba(0,0,0,0);
-    //height: $panel-height;
-}
-div.panel-messages {
-    background-color: lightgray;
+    div.panel-vid p {
+        text-align: center;
+    }
+    div.panel-messages {
+        background-color: lightgray;
+    }
 }
 
 div.panel h2 {
@@ -29,13 +33,11 @@ div.panel h2 {
 
 div.member-of-the-day {
     height: 74px;
-    //width:1170px;
     background-color: rgba(62,65,66,1.0);
     color: white;
     font-size: 150%;
     padding-right: 16px;
-    padding-top:24px;
-    margin: 0px;
+
     span {
         float: right;
     }
@@ -46,10 +48,9 @@ li {
 }
 
 ul.message {
-    padding :0;
-    float: right;
-    height: 250px;
-    overflow: auto;
+    margin: 0;
+    padding: 0;
+
     p {
         text-align: justify;
         padding-left: 12px;
@@ -63,6 +64,3 @@ div.story-prefix {
     }
 }
 
-#photo-strip {
-    max-width: 100%;
-}
